--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,29 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<header>
+<div class="contents">
+<ul>
+  <% if @current_user %>
+    <li><%= link_to "サービスについて", "/top" %></li>
+    <li><%= link_to "単語追加", "/note/new" %></li>
+    <li><%= link_to "単語帳", "/note/index" %></li>
+    <li><%= link_to "日記追加", "/post/new" %></li>
+    <li><%= link_to "日記一覧", "/post/index" %></li>
+    <li><%= link_to "ばいばい", "/logout", {method: :post} %></li>
+  <% else %>
+    <li><%= link_to "サインイン", "/" %></li>
+    <li><%= link_to "本サービス", "/top" %></li>
+  <% end %>
+</ul>
+</div>
+</header>
+<% if flash[:notice] %>
+  <div class="flash">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
 <body>
-
 <%= yield %>
-
 </body>
 </html>
