Complete quiz function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <ul>
   <% if @current_user %>
     <li><%= link_to "サービスについて", "/top" %></li>
+    <li><%= link_to "Quiz", "/quiz/home" %></li>
     <li><%= link_to "単語追加", "/note/new" %></li>
     <li><%= link_to "単語帳", "/note/index" %></li>
     <li><%= link_to "日記追加", "/post/new" %></li>
