--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -4,7 +4,7 @@
 <%= form_tag "/login" do %>
 <p>Name</p>
 <input name="name">
-<p>password</p>
+<p>Password</p>
 <input type="password" name="password">
 <p></p>
 <input type="submit" value="Signin">
