--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,8 @@
 header {
   height: 65px;
   width: 100%;
-  background-color:#19AA9C;
-
+  background-color:black;
+  color:white;
 }
 
 .contents{
