--- a/app/views/post/edit.html.erb
+++ b/app/views/post/edit.html.erb
@@ -1,9 +1,9 @@
-<h1>日記の編集</h1>
+<h1>Edit Diary</h1>
 <%= form_tag "/post/#{@post.id}/update" do %>
-<p>タイトル</p>
+<p>Title</p>
 <input name="title" value="<%= @post.title %>">
-<p>内容</p>
+<p>Content</p>
 <textarea class="post_content" name="content"><%= @post.content %></textarea>
 <p></p>
-<input type="submit" value="投稿^^">
+<input type="submit" value="Save">
 <% end %>
