--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,19 @@
 <div class="contents">
 <ul>
   <% if @current_user %>
-    <li><%= link_to "サービスについて", "/top" %></li>
+    <li><%= link_to "About", "/top" %></li>
     <li><%= link_to "Quiz", "/quiz/home" %></li>
-    <li><%= link_to "単語追加", "/note/new" %></li>
-    <li><%= link_to "単語帳", "/note/index" %></li>
-    <li><%= link_to "日記追加", "/post/new" %></li>
-    <li><%= link_to "日記一覧", "/post/index" %></li>
-    <li><%= link_to "ばいばい", "/logout", {method: :post} %></li>
+    <li><%= link_to "Add word", "/note/new" %></li>
+    <li><%= link_to "Words", "/note/index" %></li>
+    <li><%= link_to "Add Diary", "/post/new" %></li>
+    <li><%= link_to "Diaries", "/post/index" %></li>
+    <li><%= link_to "All users", "/user/index" %></li>
+    <li><%= link_to "Log out", "/logout", {method: :post} %></li>
+    <li>logged in as (<%= @current_user.name %>)</li>
   <% else %>
-    <li><%= link_to "サインイン", "/" %></li>
-    <li><%= link_to "本サービス", "/top" %></li>
+    <li><%= link_to "Sign up", "/" %></li>
+    <li><%= link_to "Sign in", "/signin" %></li>
+    <li><%= link_to "About", "/top" %></li>
   <% end %>
 </ul>
 </div>
