make small amend on view file

--- a/app/views/note/new.html.erb
+++ b/app/views/note/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add Words</h1>
+<h1>Add Word</h1>
 <div class="error">
     <% @note.errors.full_messages.each do |message| %>
         <p><%= message %></p>
