--- a/app/views/post/new.html.erb
+++ b/app/views/post/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add Diaries</h1>
+<h1>Add Diary</h1>
 <div class="error">
     <% @post.errors.full_messages.each do |message| %>
         <p><%= message %></p>
