--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,7 +2,7 @@
 <p>For everyone learning languages</p>
 <ul>
     <% if @current_user %>
-        <li>You can add words to click "Add word". Challengehe quiz using the words you added.</li>
+        <li>You can add words to click "Add word". Challenge the quiz using the words you added.</li>
         <li>Please add word you want to remember. You can save the words without example sentense.</li>
         <li>Click "Words" to see your words. You can sort by time and frequncy.</li>
         <li>"Diary" is open space. You can post question and get asnwer from other user.</li>
