--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,5 @@
 <h2>About Study Note</h2>
-<p>For everyone learning languages</p>
+<p>For everyone learning Japanese or English</p>
 <ul>
     <% if @current_user %>
         <li>You can add words to click "Add word". Challenge the quiz using the words you added.</li>
