--- a/app/views/quiz/answer.html.erb
+++ b/app/views/quiz/answer.html.erb
@@ -3,10 +3,11 @@
 </p>
 <h2>Please check correct answer as below.</h2>
 <div>
-    <p>Answer: <span class="correct_answer"><%= @correct_answer.korean %></span></p>
+    <p>English: <span class="correct_answer"><%= @correct_answer.korean %></span></p>
+    <p>Japanese: <span class="correct_answer"><%= @correct_answer.japanese %></span></p>
     <p>Example sentense: <span class="correct_answer"><%= @correct_answer.example %></span></p>
 </div>
-<h2><%= link_to "Go to next quiz", "/quiz/home" %></h2>
+<h2><%= link_to "Go to next quiz", "/quiz/japanese/home" %></h2>
 <p>
 <%= link_to "Add more words to enjoy quiz!", "/note/new" %>
 </p>
