--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,14 +3,14 @@
 <ul>
     <% if @current_user %>
         <li>You can add words to click "Add word". Challenge the quiz using the words you added.</li>
-        <li>Please add word you want to remember. You can save the words without example sentense.</li>
-        <li>Click "Words" to see your words. You can sort by time and frequncy.</li>
-        <li>"Diary" is open space. You can post question and get asnwer from other user.</li>
+        <li>Please add word you want to learn. You can save the words without example sentense.</li>
+        <li>Click "Words" to see your words. You can sort by time and frequency.</li>
+        <li>"Diary" is open space. You can post question and get asnwer from other users.</li>
         <li>If you find grammer mistake on others diary, you can make comment and let him/her know.</li>
         <li>Make sure to log out after using.</li>
     <% else %>
-        <li>Please sign up to enjoy "Study Note"!</li>
-        <li>You can save the words you want to memorize and challenge the quiz.</li>
+        <li>Please sign up to enjoy "Study Note".</li>
+        <li>You can save the words you want to learn and challenge the quiz.</li>
         <li>You can also get advise from other user regarding the language you want to learn.</li>
     <% end %>
 </ul>
