--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to Study Note</h1>
-<h3>Please sign up to start study!</h3>
+<h3>Please sign up to start!</h3>
 <div>
     <div class="error_messages">
         <% if @error_messages %>
