amend quiz function

--- a/app/views/quiz/answer2.html.erb
+++ b/app/views/quiz/answer2.html.erb
@@ -7,7 +7,7 @@
     <p>Japanese: <span class="correct_answer"><%= @correct_answer.japanese %></span></p>
     <p>Example sentense: <span class="correct_answer"><%= @correct_answer.example %></span></p>
 </div>
-<h2><%= link_to "Go to next quiz", "/quiz/home" %></h2>
+<h2><%= link_to "Go to next quiz", "/quiz/japanese/home" %></h2>
 <p>
 <%= link_to "Add more words to enjoy quiz!", "/note/new" %>
 </p>
